# blockary

./: Cargo.toml  README.md
.claude/: hookify.no-push-to-main.local.md  hookify.require-build-test.local.md
src/: block.rs  blockary_cfg.rs  cal_day_plan.rs  cli.rs  cmd_pull.rs  cmd_spent.rs  cmd_sync.rs  config.rs  day_plan.rs  main.rs  markdown_access.rs  md_daily_file.rs  md_day_plan.rs  sync.rs  tag.rs  time_summary.rs
