[package]
name = "blockary"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
comfy-table = "7.2.2"
icalendar = "0.17.6"
pulldown-cmark = "0.13.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
walkdir = "2.5.0"
